# gss-tcad

./: Acknowledgment  ChangeLog  Install  LICENSE  config.h.in  configure  configure.in  make.defs.in  makefile
doc/: bug.txt  gss_cards.tex
examples/BJT/: step1.inp  step2.inp  step3.inp  step4.inp  step5.inp
examples/CMOS_Circuit/: invertor.cir  nand.cir  nmos1.inp  nmos2.inp  nmos3.inp  nmos4.inp  nmos_mix1.inp  pmos1.inp  pmos2.inp  pmos_mix1.inp
examples/Cap/: Cap.inp  cap.cc
examples/DBD/: biv.txt  dbd.inp
examples/EEPROM/: eeprom.cir  eeprom_mix1.inp  model.inp  read.inp
examples/HBJT/: step1.inp  step2.inp  step3.inp
examples/HEMT/: HEMT.cgns  step1.inp
examples/MESFET/: IV.inp  init.inp
examples/MOS_diode/: md.inp
examples/OPTICAL/: Cylinder.inp  Square.inp  diode_dc.inp  diode_metal.inp  diode_tran.inp
examples/PN_diode/: diotran.cir  mix.inp  mulregion_pn.inp  step1.inp  step2a.inp  step2b.inp  step3.inp  step4.inp
examples/SOI/: SOI.inp
examples/Schottky_diode/: run.inp
examples/Simple_MOSFET/: step1.inp  step2.inp  step3.inp  step4.inp
examples/Template_BJT/: bjt.tcl
examples/Template_MOS/: nmos-0.5um.tcl  nmos-1um.tcl  nmos_iv.inp
examples/Thyristor/: circuit.inp  model.inp
examples/Well_Tempered/25nm/: 25nm.cgns  25nm_iv.inp  inp25.inp
examples/Well_Tempered/90nm/: 90nm.cgns  90nm.inp  nmos_iv.inp
examples/Zener_diode/: step1.inp  step2.inp
lib/: PMI
lib/gui_script/: combobox.tcl  config.tcl  ctext.tcl  tclIndex  tree.tcl
lib/template/: bipdef.tcl  bipstr.tcl  mosdef.tcl  mosstr1.tcl  mosstr2.tcl
src/: main.cc  makefile
src/cmd/: cmdbuf.cc  lex.l  log.cc  makefile  parser.y  sample.inp
src/graphic/: grafix3d.cpp  makefile  plot.cc  plot3d.cc  rainbow.txt  showmesh.cc  vtk_plot.cc  wgraph.cpp  xgraph.cpp
src/graphic/white_style_X11/: grafix3d.cpp  xgraph.cpp
src/grid/: grid.cc  makefile  skeleton.h  trimesh.cc
src/include/: PMI.h  adolc.h  bc.h  bsolver.h  bzonedata.h  cmdbuf.h  csa.h  ctrl.h  ddm_nt1ac.h  ddm_nt1e.h  ddm_nt2e.h  doping.h  ebm_nt3e.h  element.h  em_fem.h  gen_update.h  geom.h  grafix3d.h  interface.h  isource.h  log.h  lsource.h  material.h  mathfunc.h  mesh.h  minell.h  mix1.h  mix2.h  mixcomm.h  opt_update.h  phy_scale.h  qddm_nt1e.h  soldata.h  solverdef.h  termnlgy.h  typedef.h  vec3.h  vec4.h  vec5.h  vec6.h  (+5 more)
src/material/: adolc_init.cc  makefile  matdefine.h  material.cc  phy_scale.cc
src/material/3C-SiC/: 3C-SiC_Optical.cc  3C-SiC_band.cc  3C-SiC_basic.cc  3C-SiC_gen.cc  3C-SiC_mob_Analytic.cc  3C-SiC_thermal.cc  makefile
src/material/Ag/: Ag_Optical.cc  Ag_basic.cc  Ag_thermal.cc  makefile
src/material/Air/: Air_Optical.cc  Air_basic.cc  Air_thermal.cc  makefile
src/material/Al/: Al_Optical.cc  Al_basic.cc  Al_thermal.cc  makefile
src/material/AlGaAs/: AlGaAs_Optical.cc  AlGaAs_band.cc  AlGaAs_basic.cc  AlGaAs_gen.cc  AlGaAs_mob_Analytic.cc  AlGaAs_thermal.cc  makefile
src/material/Au/: Au_Optical.cc  Au_basic.cc  Au_thermal.cc  makefile
src/material/Cu/: Cu_Optical.cc  Cu_basic.cc  Cu_thermal.cc  makefile
src/material/Elec/: Elec_Optical.cc  Elec_basic.cc  Elec_thermal.cc  makefile
src/material/GaAs/: GaAs_Optical.cc  GaAs_band.cc  GaAs_basic.cc  GaAs_gen.cc  GaAs_mob_Analytic.cc  GaAs_mob_Hypertang.cc  GaAs_thermal.cc  makefile
src/material/Ge/: Ge_Optical.cc  Ge_band.cc  Ge_basic.cc  Ge_gen.cc  Ge_mob_Analytic.cc  Ge_thermal.cc  makefile
src/material/HgCdTe/: HgCdTe_Optical.cc  HgCdTe_band.cc  HgCdTe_basic.cc  HgCdTe_gen.cc  HgCdTe_mob_Analytic.cc  HgCdTe_thermal.cc  makefile
src/material/InAs/: InAs_Optical.cc  InAs_band.cc  InAs_basic.cc  InAs_gen.cc  InAs_mob_Analytic.cc  InAs_thermal.cc  makefile
src/material/InGaAs/: InGaAs_Optical.cc  InGaAs_band.cc  InGaAs_basic.cc  InGaAs_gen.cc  InGaAs_mob_Analytic.cc  InGaAs_thermal.cc  makefile
src/material/InN/: InN_Optical.cc  InN_band.cc  InN_basic.cc  InN_gen.cc  InN_mob_Analytic.cc  InN_thermal.cc  makefile
src/material/InP/: InP_Optical.cc  InP_band.cc  InP_basic.cc  InP_gen.cc  InP_mob_Analytic.cc  InP_thermal.cc  makefile
src/material/InSb/: InSb_Optical.cc  InSb_band.cc  InSb_basic.cc  InSb_gen.cc  InSb_mob_Analytic.cc  InSb_thermal.cc  makefile
src/material/Nitride/: Nit_Optical.cc  Nit_basic.cc  Nit_thermal.cc  makefile
src/material/PML/: PML_basic.cc  PML_thermal.cc  makefile
src/material/PolySi/: PolySi_Optical.cc  PolySi_basic.cc  PolySi_thermal.cc  makefile
src/material/S-SiO2/: SiO2S_Optical.cc  SiO2S_band.cc  SiO2S_basic.cc  SiO2S_gen.cc  SiO2S_mob_Constant.cc  SiO2S_thermal.cc  makefile
src/material/Si/: Si_Optical.cc  Si_band.cc  Si_basic.cc  Si_gen.cc  Si_gen_Valdinoci.cc  Si_mob_Analytic.cc  Si_mob_Constant.cc  Si_mob_HP.cc  Si_mob_Lombardi.cc  Si_mob_Lucent.cc  Si_mob_Philips.cc  Si_thermal.cc  makefile
src/material/SiGe/: SiGe_Optical.cc  SiGe_band.cc  SiGe_basic.cc  SiGe_gen.cc  SiGe_mob_Analytic.cc  SiGe_mob_Constant.cc  SiGe_mob_HP.cc  SiGe_mob_Lombardi.cc  SiGe_mob_Lucent.cc  SiGe_mob_Philips.cc  SiGe_thermal.cc  makefile
src/material/SiO2/: SiO2_Optical.cc  SiO2_basic.cc  SiO2_thermal.cc  makefile
src/material/TiSi2/: TiSi2_Optical.cc  TiSi2_basic.cc  TiSi2_thermal.cc  makefile
src/material/Vacuum/: Vacuum_basic.cc  Vacuum_thermal.cc  makefile
src/mesh/: element.cc  geom.cc  interface.cc  makefile  mesh.cc  triangle.c  zone.cc
src/runctrl/: ctrl.cc  makefile
src/solver/: bc.cc  data_init.cc  data_io.cc  doping.cc  initial.cc  makefile  probe.cc  refine.cc  source.cc
src/solver/ddm1ac/: ddm_nt1ac.cc  elecequ1ac.cc  insulequ1ac.cc  makefile  semiequ1ac.cc
src/solver/ddm1e/: ddm_nt1e.cc  elecequ1.cc  insulequ1.cc  jflux1e.h  makefile  semiequ1e.cc
src/solver/ddm2e/: ddm_nt2e.cc  elecequ2.cc  insulequ2.cc  jflux2e.h  makefile  semiequ2e.cc
src/solver/ebm3e/: ebm_nt3e.cc  elecequ3.cc  flux3e.h  (+3 more)
src/utils/: makefile
(+34 files in other folders)
